finish regAllocator